unpackaged/main/default/objects/pse__Transaction_Delta__c/pse__Transaction_Delta__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__TransactionDeltaHelp</customHelpPage>
    <description>Tracks an unprocessed creation or update of a transaction that has been queued for processing. Transaction deltas are produced when the Actuals Calculation Mode is 'Scheduled' and new or updated transactions do not roll-up to Actuals immediately. Financialforce PSA creates transaction deltas when transactions are inserted, updated, or deleted.</description>
    <label>Transaction Delta</label>
    <nameField>
        <label>Transaction Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Deltas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>