unpackaged/main/default/objects/pse__Transaction_Delta__c/fields/pse__Is_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Time</label>
    <type>Checkbox</type>
</CustomField>