unpackaged/main/default/objects/pse__Transaction_Delta__c/fields/pse__New_Category__c.field-meta.xml
<CustomField>
    <fullName>pse__New_Category__c</fullName>
    <label>New Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>