unpackaged/main/default/objects/pse__Transaction_Delta__c/fields/pse__New_Currency__c.field-meta.xml
<CustomField>
    <fullName>pse__New_Currency__c</fullName>
    <label>New Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>