unpackaged/main/default/objects/pse__Transaction_Delta__c/fields/pse__New_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__New_Effective_Date__c</fullName>
    <label>New Effective Date</label>
    <type>Date</type>
</CustomField>