unpackaged/main/default/objects/pse__Transaction_Delta__c/fields/pse__New_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__New_Hours__c</fullName>
    <label>New Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>