unpackaged/main/default/objects/pse__Transaction_Delta__c/fields/pse__New_Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__New_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Transaction Deltas</relationshipLabel>
    <relationshipName>Transaction_Deltas</relationshipName>
    <type>Lookup</type>
</CustomField>