unpackaged/main/default/objects/pse__Transaction_Delta__c/fields/pse__Old_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Old_Amount__c</fullName>
    <label>Old Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>