unpackaged/main/default/objects/pse__Transaction_Delta__c/fields/pse__Old_Category__c.field-meta.xml
<CustomField>
    <fullName>pse__Old_Category__c</fullName>
    <label>Old Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>