unpackaged/main/default/objects/pse__Transaction_Delta__c/fields/pse__Old_Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Old_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Transaction Deltas (Old Practice)</relationshipLabel>
    <relationshipName>Transaction_Deltas1</relationshipName>
    <type>Lookup</type>
</CustomField>