unpackaged/main/default/objects/pse__Transaction_Delta__c/fields/pse__Old_Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Old_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Transaction Deltas (Old Region)</relationshipLabel>
    <relationshipName>Transaction_Deltas1</relationshipName>
    <type>Lookup</type>
</CustomField>